[tool.poetry]
name = "twilog-web-archiver"
version = "1.0.0"
description = "Archive twilog website month list pages into Internet Archive Wayback Machine"
authors = ["TAKAHASHI Shuuji <shuuji3@gmail.com>"]

license = 'GPL-3.0-or-later'

readme = 'README.rst'

repository = 'https://github.com/shuuji3/twilog-web-archiver'
homepage = 'https://github.com/shuuji3/twilog-web-archiver'

keywords = ['twilog', 'twitter', 'archive', 'Wayback Machine', 'Internet Archive']

[tool.poetry.scripts]
twilog-web-archiver = "twilog_web_archiver.main:main"

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
click = "^8.0"
requests = "^2.21"
lxml = "^4.3"
pluggy = "^0.13.1"
waybackpy = "^3.0.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
coverage = "^5.3"
black = "^23.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
